# trump-signal

./: .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  nginx.conf  proxy.py  pyproject.toml  requirement.txt  requirements.txt  start.sh
.github/workflows/: data_update.yml  pipeline.yml  update_data.yml
.streamlit/: config.toml
app/: utils.py
app/api/: main.py  monitoring.py  soy_trump_rhetoric.py
app/core/: config.py
app/models/: qa.py  sentiment.py
app/services/: data_service.py  model_service.py  sentiment_service.py
backend/: apis.py  diagnose.py  model_dashboard.py  model_predict.py  model_training.py
backend/model_artifacts/: feature_cols.json  metrics.json  scaler.pkl
backend_database/: background_update.py  build_embeddings.py  daily_update.py  daily_update_hf.py  data_api.py  database_use.md  embeddings.py  incremental_embeddings.py  init_db.py  trump_data.db
chroma_db/9b2268c7-8b0f-423b-b875-6d6f84215146/: index_metadata.pickle
config/: config_data.json
data/: .gitignore  build_db.py  sample.py  trump_pulse.db  trump_pulse.db.dvc
frontend/: config.py  streamlitapp.py
frontend/_components/: charts.py  post_card.py
frontend/_data/: api_client.py
frontend/_pages/: dev.py  feed.py  (+4 more)
scripts/: push_new_data_to_hf.py
tests/: test_api.py  test_build_embeddings.py  test_daily_update.py  test_data_api.py  test_embeddings.py  test_feedback.py  test_init_db.py  test_monitoring.py  test_qa_endpoint.py  test_utils.py
trump_signal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
workflows/: update_data.yml
(+12 files in other folders)
